Delete Ui Test classes